css/base/reset.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: var(--font-family-main);
    font-size: var(--font-size-text-default);
    background-color: var(--color-background-primary);
    color: var(--color-text-primary);
    line-height: var(--line-height-body);
    overflow-x: hidden;
}

body:has(dialog[open]) {
    overflow: hidden;
}

button, input, textarea {
    font: inherit;
    border: none;
    background: none;
    color: inherit;
}

button {
    cursor: pointer;
}

input, textarea {
    cursor: text;
}

input[type="checkbox"] {
    cursor: pointer;
}

img {
    display: block;
    max-width: 100%;
    height: auto;
}

p {
    color: var(--color-text-secondary);
}

a {
    text-decoration: none;
    color: var(--color-text-secondary);
    font-weight: var(--font-weight-action);
}

ul, ol {
    list-style: none;
}

:focus-visible {
    outline: 2px solid var(--color-border-focus-ring);
    outline-offset: 4px;
}

